...
  static const String foodPreferencesOptionDislike =
      'food_preferences.option_dislike';
  static const String foodPreferencesCompleteButton =
      'food_preferences.complete_button';

  // Settings Screen
  static const String settingsTitle = 'settings.title';
  static const String settingsAccountSection = 'settings.account_section';
  static const String settingsAccountStatusAnonymous =
      'settings.account_status_anonymous';
  static const String settingsAccountStatusAuthenticated =
      'settings.account_status_authenticated';
  static const String settingsCreateAccountButton =
...
